# nacp

./: .dockerignore  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  dev.Dockerfile  generate.go  go.mod  go.sum  input.json  main.go  main_test.go  nacp.go  nacp_test.go  sonar-project.properties
.github/workflows/: go.yml  release.yml
admissionctrl/: controller.go  controller_test.go
admissionctrl/mutator/: json_patch_webhook.go  json_patch_webhook_test.go  json_patcher.go  json_patcher_test.go  mutator.go  mutator_test.go  opa_json_patch.go  opa_json_patch_test.go  web_hook_mutator.go  web_hook_mutator_test.go  webhook_mutator.go  webhook_mutator_test.go
admissionctrl/notation/: notation.go  notation_test.go
admissionctrl/opa/: opa.go  opa_test.go
admissionctrl/remoteutil/: remoteutil.go  remoteutil_test.go
admissionctrl/validator/: notation_validator.go  notation_validator_test.go  opa_validator.go  opa_validator_test.go  webhook_validator.go  webhook_validator_test.go
cmd/nacp/: nacp.go  nacp_otel_test.go  nacp_test.go
config/: config.go  config_test.go
example/: readme.md
example/demo/: nacp.conf  (+3 more)
fixture/: job.json
logutil/: logutil.go  logutil_test.go
misc/hashitalk_deploy2023/assets/apps/my-fastapi-app/: Dockerfile  pyproject.toml
o11y/: metric.go
otel/: otel.go  otel_test.go
testdata/: brokenconfig.hcl  example.nomad  job.json  job_invalid_policy.json  job_with_many_policies.json  job_with_policy.json  policy_prefix.rego  testconfig.hcl
testutil/: hello_mutator.go  otel.go  testutil.go
(+178 files in other folders)
